@startuml BCE_UpdateCategory
title Update Category

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "update_category.js" as B {
  +openEdit(c)
  +loadCategories()
  +showSuccess(msg)
}

class "UpdateCategoryController" as C {
  +bool
  update(int category_id, dict data)
}

class "FRACategory" as E {
  +bool
  updateById(int category_id, dict data)
}

B -- C
C -- E

@enduml
